ロゴリンクのアンカー設定、infoの文字サイズ調整

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </div>
         <div class="center-side">
             <header id="header">
-                <div class="site-title"><img src="./img/mv.png" alt=""></div>
+                <a class="site-title" href="#mv"><img src="./img/mv.png" alt=""></a>
             </header>
             <main>
-                <div class="mv curtain">
+                <div id="mv" class="mv curtain">
                     <div class="animation-bg"></div>
                     <div class="animation-bg02"></div>
                     <div class="mv_logo wow animate__animated animate__fadeInUp" data-wow-duration="2s">
@@ -101,9 +101,9 @@
                                         <ul>
                                             <li><span>日付</span><br><span>2024年3月29日(土)</span></li>
                                             <li><span>時間</span><br><span>14:00～16:00 開催予定</span></li>
-                                            <li><span>場所</span><br><span class="t-mini">堺西文化会館1F ウエスティ・ホール</span></li>
+                                            <li><span>場所</span><br><span>堺西文化会館1F ウエスティ・ホール</span></li>
                                             <li><span>定員</span><br><span>540名</span></li>
-                                            <li><span>主催</span><br><span class="t-mini">一般社団法人 さかい若者応援プロジェクト</span></li>
+                                            <li><span>主催</span><br><span>一般社団法人 さかい若者応援プロジェクト</span></li>
                                             <li><span>入場料（高校生以上）</span><br><span>2,000円</span></li>
                                             <li><span>入場料（中学生以下）</span><br><span>1,000円</span></li>
                                         </ul>
