--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=M+PLUS+Rounded+1c&family=RocknRoll+One&display=swap" rel="stylesheet">
 
     <link href="./css/sanitize.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="./css/base.css" rel="stylesheet" />
     <link href="./css/top.css" rel="stylesheet" />
@@ -41,15 +40,14 @@
                 
                 <div class="sv">
                     <swiper-container class="mySwiper" direction="vertical" pagination="true" pagination-clickable="true">
-                        <div class="swiper-pagination"></div>
                         <swiper-slide>
                             <section id="section01" class="section about">
                                 <div class="section_container">
                                     <p class="section_title">ABOUT</p>
                                     <div class="about_content">
-                                        <p class="about_text">BUDDING SAKAI🌟（芽吹くサカイ）は、<br>堺の未来を担う才能を応援するプロジェクト！🚀</p>
-                                        <p class="about_text">音楽､ダンス､マジック､和太鼓､<br>日本舞踊､バトントワリングなど、<br>未来のスターたちを力強くバックアップ❗️📣</p>
-                                        <p class="about_text">躍動感あふれるイベントで一緒に感動しよう✨</p>
+                                        <p class="about_text">BUDDING SAKAIは、<br>堺の未来を担う才能を<br>応援するプロジェクト！🚀</p>
+                                        <p class="about_text">様々なパフォーマンスで魅せる<br>未来のスターたちを<br>力強くバックアップ📣</p>
+                                        <p class="about_text">躍動感あふれるイベントで<br>一緒に感動しよう✨</p>
                                     </div>
                                 </div>
                             </section>
@@ -136,7 +134,9 @@
                 </div>
             </main>
             <footer id="footer">
-                <a class="ticket-link" href="https://docs.google.com/forms/d/e/1FAIpQLSfrb5HjFOHfTnzqCOTQCvrUT0kB0BIzu15NiMtReEhSos1x1A/viewform" target="_blank" rel="noopener noreferrer">チケットの購入はこちらから</a>
+                <a class="ticket-link c-button _shiny" href="https://docs.google.com/forms/d/e/1FAIpQLSfrb5HjFOHfTnzqCOTQCvrUT0kB0BIzu15NiMtReEhSos1x1A/viewform" target="_blank" rel="noopener noreferrer">
+                    <span>チケットの購入はこちらから<img src="./img/icon_link.svg" alt=""></span>
+                </a>
             </footer>
             
         </div>
