performerセクションのコンテンツをカード化

--- a/index.html
+++ b/index.html
@@ -52,25 +52,91 @@
                                 </div>
                             </section>
                         </swiper-slide>
+                        
                         <swiper-slide>
                             <section id="section02" class="section performer">
                                 <div class="section_container">
                                     <p class="section_title">PERFORMER</p>
                                     <div class="performer_content">
-                                        <ul>
-                                            <li><a href="">出演者名1</a></li>
-                                            <li><a href="">出演者名2</a></li>
-                                            <li><a href="">出演者名3</a></li>
-                                            <li><a href="">出演者名4</a></li>
-                                            <li><a href="">出演者名5</a></li>
-                                            <li><a href="">出演者名6</a></li>
-                                            <li><a href="">出演者名7</a></li>
-                                            <li><a href="">出演者名8</a></li>
-                                        </ul>
+                                        <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
+                                            <swiper-slide>
+                                                <div class="performer_image">
+                                                    <img src="https://placehold.jp/600x600.png" alt="">
+                                                </div>
+                                                <p class="performer_name">
+                                                    <span>ダミー1</span>
+                                                </p>
+                                                <a class="performer_link" href="">Instagramアカウントはこちら</a>
+                                            </swiper-slide>
+                                            <swiper-slide>
+                                                <div class="performer_image">
+                                                    <img src="https://placehold.jp/600x600.png" alt="">
+                                                </div>
+                                                <p class="performer_name">
+                                                    <span>ダミー2</span>
+                                                </p>
+                                                <a class="performer_link" href="">Instagramアカウントはこちら</a>
+                                            </swiper-slide>
+                                            <swiper-slide>
+                                                <div class="performer_image">
+                                                    <img src="https://placehold.jp/600x600.png" alt="">
+                                                </div>
+                                                <p class="performer_name">
+                                                    <span>ダミー3</span>
+                                                </p>
+                                                <a class="performer_link" href="">Instagramアカウントはこちら</a>
+                                            </swiper-slide>
+                                            <swiper-slide>
+                                                <div class="performer_image">
+                                                    <img src="https://placehold.jp/600x600.png" alt="">
+                                                </div>
+                                                <p class="performer_name">
+                                                    <span>ダミー4</span>
+                                                </p>
+                                                <a class="performer_link" href="">Instagramアカウントはこちら</a>
+                                            </swiper-slide>
+                                            <swiper-slide>
+                                                <div class="performer_image">
+                                                    <img src="https://placehold.jp/600x600.png" alt="">
+                                                </div>
+                                                <p class="performer_name">
+                                                    <span>ダミー5</span>
+                                                </p>
+                                                <a class="performer_link" href="">Instagramアカウントはこちら</a>
+                                            </swiper-slide>
+                                            <swiper-slide>
+                                                <div class="performer_image">
+                                                    <img src="https://placehold.jp/600x600.png" alt="">
+                                                </div>
+                                                <p class="performer_name">
+                                                    <span>ダミー6</span>
+                                                </p>
+                                                <a class="performer_link" href="">Instagramアカウントはこちら</a>
+                                            </swiper-slide>
+                                            <swiper-slide>
+                                                <div class="performer_image">
+                                                    <img src="https://placehold.jp/600x600.png" alt="">
+                                                </div>
+                                                <p class="performer_name">
+                                                    <span>ダミー7</span>
+                                                </p>
+                                                <a class="performer_link" href="">Instagramアカウントはこちら</a>
+                                            </swiper-slide>
+                                            <swiper-slide>
+                                                <div class="performer_image">
+                                                    <img src="https://placehold.jp/600x600.png" alt="">
+                                                </div>
+                                                <p class="performer_name">
+                                                    <span>ダミー8</span>
+                                                </p>
+                                                <a class="performer_link" href="">Instagramアカウントはこちら</a>
+                                            </swiper-slide>
+                                        </swiper-container>
                                     </div>
                                 </div>
                             </section>
                         </swiper-slide>
+
                         <swiper-slide>
                             <section id="section03" class="section movie">
                                 <div class="section_container">
