pc時の表示分を作成

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <body>
     <div class="split-container">
         <div class="left-side pc">
-            
+            <a class="pc-logo site-title" href="#mv"><img src="./img/mv.png" alt=""></a>
         </div>
         <div class="center-side">
-            <header id="header">
+            <header id="header" class="sp">
                 <a class="site-title" href="#mv"><img src="./img/mv.png" alt=""></a>
             </header>
             <main>
@@ -199,15 +199,17 @@
                     </swiper-container>
                 </div>
             </main>
-            <footer id="footer">
-                <a class="ticket-link c-button _shiny" href="https://docs.google.com/forms/d/e/1FAIpQLSfrb5HjFOHfTnzqCOTQCvrUT0kB0BIzu15NiMtReEhSos1x1A/viewform" target="_blank" rel="noopener noreferrer">
+            <footer id="footer" class="sp">
+                <a class="footer-link ticket-link _shiny" href="https://docs.google.com/forms/d/e/1FAIpQLSfrb5HjFOHfTnzqCOTQCvrUT0kB0BIzu15NiMtReEhSos1x1A/viewform" target="_blank" rel="noopener noreferrer">
                     <span>チケットの購入はこちらから<img src="./img/icon_link.svg" alt=""></span>
                 </a>
             </footer>
             
         </div>
         <div class="right-side pc">
-
+            <a class="pc-link ticket-link _shiny" href="https://docs.google.com/forms/d/e/1FAIpQLSfrb5HjFOHfTnzqCOTQCvrUT0kB0BIzu15NiMtReEhSos1x1A/viewform" target="_blank" rel="noopener noreferrer">
+                <span>チケットの購入はこちらから<img src="./img/icon_link.svg" alt=""></span>
+            </a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
